--- a/views/members/index.erb
+++ b/views/members/index.erb
@@ -2,9 +2,9 @@
   <ul>
   <% for member in @members %>
     <li>
-    <p> <%= member.name%></p>
-    <p>£<%= (member.salary / 12.0).floor(3) %> per month</p>
-    <p><%= member.github %> </p>
+    <p> <%= member.first_name%> <%= member.last_name %></p>
+    <p>£<%= (member.salary / 12.0).floor(2) %> per month</p>
+    <p><a href=""><%= member.github %> </a></p>
     </li>
     <hr />
   <% end %>
