new 'projects' are correctly being saved

--- a/views/members/new.erb
+++ b/views/members/new.erb
@@ -21,3 +21,10 @@
       <label for="github">Github Profile:</label>
       <input type="text" name="github" id="github"/>
     </div>
+
+    <div class="form-el">
+      <input type="submit" value="Create Member"/>
+    </div>
+
+  </div>
+</form>
