project.rb form for new projects is correctly adding new data to db

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
 <h1>This is the index erb file</h1>
+<p>
+  <form action="/members/<%= member.id %>" method="GET">
+    <input class="btn" type="button" value="view" />
+  </form>
+</p>
