--- a/views/members/index.erb
+++ b/views/members/index.erb
@@ -7,7 +7,7 @@
     <p><a href=""><%= member.github %> </a></p>
     <p>
       <form action="/members/<%= member.id %>" method="GET">
-        <input class="btn" type="button" value="view" />
+        <button type="submit" value="view">View</button>
       </form>
     </p>
     </li>
