--- a/views/members/show.erb
+++ b/views/members/show.erb
@@ -3,3 +3,9 @@
 <p><%="#{@member.first_name} #{@member.last_name}" %> </p>
 <p>£<%= (@member.salary / 12.0).floor(2) %> per month</p>
 <p><a href=""><%= @member.github %> </a></p>
+<form action="/members/<%= @member.id %>/delete" method="POST">
+  <button type="submit" value="delete">Delete</button>
+</form>
+<form action="/members/<%= @member.id %>/edit" method="GET">
+  <button type="submit" value="Edit">Edit</button>
+</form>
