all crud actions working for 'members' and 'projects'

--- a/views/members/index.erb
+++ b/views/members/index.erb
@@ -1,4 +1,7 @@
 <h1> These are all the members: </h1>
+<form action="/members/new" method="GET">
+  <button type="submit" value="view">New Member</button>
+</form>
   <ul>
   <% for member in @members %>
     <li>
