--- a/views/projects/index.erb
+++ b/views/projects/index.erb
@@ -1,4 +1,7 @@
 <h1> These are all the projects: </h1>
+<form action="/projects/new" method="GET">
+  <button type="submit" value="view">New Project</button>
+</form>
   <ul>
   <% for project in @projects %>
     <li>
