--- a/views/members/show.erb
+++ b/views/members/show.erb
@@ -1,5 +1,8 @@
 
 <h1>Member Info:</h1>
+<form action="/members" method="GET">
+  <button type="submit" value="view_all">View All</button>
+</form>
 <p><%="#{@member.first_name} #{@member.last_name}" %> </p>
 <p>£<%= (@member.salary / 12.0).floor(2) %> per month</p>
 <p><a href=""><%= @member.github %> </a></p>
