--- a/views/projects/show.erb
+++ b/views/projects/show.erb
@@ -1,4 +1,7 @@
 <h1>Project Info:</h1>
+<form action="/projects" method="GET">
+  <button type="submit" value="view_all">View All</button>
+</form>
 <p><%= @project.name %> </p>
 <p>£<%= @project.budget %></p>
 <p>Date: <%= @project.start_date %></p>
