--- a/views/projects/new.erb
+++ b/views/projects/new.erb
@@ -15,7 +15,17 @@
     <div class="form-el">
       <label for="start_date">Select start date:</label>
       <input type="date" name="start_date" id="start_date">
+    </div>
+
     </form>
+
+    <div class="form-el">
+    <select>
+      <% for member in @members %>
+      <option value="member" name="member_id"><%= member.first_name %></option>
+      <% end %>
+    </select>
+  </div>
 
     <div class="form-el">
       <input type="submit" value="Create Project"/>
