--- a/views/projects/new.erb
+++ b/views/projects/new.erb
@@ -19,13 +19,21 @@
 
     </form>
 
+
+    <select name="type">
+      <option value="type" name="type" id="type">Front End</option>
+      <option value="type" name="type" id="type">Back End</option>
+      <option value="type" name="type" id="type">Other</option>
+    </select>
+
+
     <div class="form-el">
     <select>
       <% for member in @members %>
       <option value="member" name="member_id"><%= member.first_name %></option>
       <% end %>
     </select>
-  </div>
+    </div>
 
     <div class="form-el">
       <input type="submit" value="Create Project"/>
