--- a/views/members/edit.erb
+++ b/views/members/edit.erb
@@ -28,3 +28,6 @@
 
   </div>
 </form>
+<form action="/members/<%= @member.id %>" method="GET">
+  <button type="submit" value="view">Cancel</button>
+</form>
