--- a/views/projects/show.erb
+++ b/views/projects/show.erb
@@ -5,6 +5,7 @@
 <p><%= @project.name %> </p>
 <p>£<%= @project.budget %></p>
 <p>Date: <%= @project.start_date %></p>
+<p>Project Description: <%= @project.description %></p>
 <form action="/projects/<%= @project.id %>/delete" method="POST">
   <button type="submit" value="delete">Delete</button>
 </form>
