--- a/views/projectteams/new.erb
+++ b/views/projectteams/new.erb
@@ -19,5 +19,7 @@
     </select>
   </label>
 
+  <p><%= @error if @error != nil %></p>
+
   <input class="btn btn--action" type='submit' value="Add">
 </form>
